changed registration, added common template